<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTiempo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTiempo"
    android:padding="@dimen/padding"
    tools:context=".TiempoActivity">

    <TextView
        android:id="@+id/tvZona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="Zona"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="12:00"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivFoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/tv_temperatura"
        android:textColor="@android:color/white"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/tvHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="157dp"
        android:text="@string/tv_humedad"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLluvia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvHumedad"
        android:layout_marginTop="-3dp"
        android:layout_toEndOf="@+id/tvZona"
        android:text="@string/tv_lluvia"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvValorHumedad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="129dp"
        android:layout_toStartOf="@+id/ivFoto"
        android:text="@string/tv_valor_humedad"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvValorLluvia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvValorHumedad"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/tvZona"
        android:text="@string/tv_valor_lluvia"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSumario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>